@@ -12,5 +12,6 @@
     # compile program
     compile P0, P1, S6
     # run program
-    invoke P0
+    invokecc P0
+    print "Still hacking.\n"
     end
